# agentic-experiment

./: .gitignore  README.md  env.sample  pyproject.toml
agentic_edu/: example.py  main.py
agentic_edu/agents/: agent_config.py  agents.py  instruments.py
agentic_edu/modules/: db.py  embeddings.py  file.py  llm.py  orchestrator.py
tests/: test_agent_config.py  test_agents.py  test_db.py  test_embeddings.py  test_file.py  test_instruments.py  test_llm.py  test_orchestrator.py  test_rand.py  test_types.py
