[tool.poetry]
name = "agentic-edu"
version = "0.1.0"
description = ""
authors = ["Matthew Redrup"]
readme = "README.md"
packages = [{include = "agentic_edu"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
argparse = "^1.4.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
pyautogen = "^0.1.13"
transformers = "^4.34.1"
torch = "2.0.0"
scikit-learn = "^1.3.2"
tiktoken = "^0.5.1"
pyyaml = "^6.0.1"
guidance = "^0.0.64"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "agentic_edu.main:main"